# MetaSearchMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: publish.yml
metasearchmcp/: __init__.py  aggregator.py  broker.py  catalog.py  cli.py  config.py  contracts.py  dedup.py  main.py  mcp_server.py  merge.py  orchestrator.py  schema.py  server.py
metasearchmcp/api/: __init__.py  routes.py
metasearchmcp/providers/: __init__.py  alpha_vantage.py  arxiv.py  baidu.py  base.py  bing.py  brave.py  crates.py  crossref.py  dockerhub.py  duckduckgo.py  ecosia.py  finnhub.py  github.py  gitlab.py  google.py  google_searxng.py  google_serpbase.py  google_serper.py  hackernews.py  internet_archive.py  lib_rs.py  metacpan.py  mojeek.py  mwmbl.py  npm.py  openlibrary.py  pkg_go_dev.py  pubmed.py  pypi.py  qwant.py  reddit.py  registry.py  rubygems.py  semanticscholar.py  stackoverflow.py  startpage.py  tavily.py  wikidata.py  wikipedia.py  (+4 more)
scripts/: install.py
tests/: __init__.py  test_aggregator.py  test_baidu_provider.py  test_bing_provider.py  test_broker_and_routes.py  test_broker_runtime.py  test_catalog.py  test_config_and_cli.py  test_dedup.py  test_finance_providers.py  test_install_script.py  test_new_providers.py  test_providers.py  test_providers_extended.py  test_qwant_provider.py  test_routes.py  test_schema.py  test_startpage_provider.py  test_yahoo_provider.py  test_youcom_provider.py
