[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MetaSearchMCP"
version = "0.1.0"
description = "MCP-first metasearch backend for AI agents and structured search workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
metasearchmcp = "metasearchmcp.server:run"
metasearchmcp-mcp = "metasearchmcp.broker:run"
metasearchmcp-setup = "metasearchmcp.cli:setup"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["metasearchmcp"]
