[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metasearchmcp"
version = "0.1.0"
description = "MCP-first metasearch backend for AI agents and structured search workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
metasearchmcp = "metasearchmcp.server:run"
metasearchmcp-mcp = "metasearchmcp.broker:run"
metasearchmcp-setup = "metasearchmcp.cli:setup"
msm = "metasearchmcp.server:run"
msm-mcp = "metasearchmcp.broker:run"

[project.urls]
Homepage = "https://github.com/gefsikatsinelou/MetaSearchMCP"
Repository = "https://github.com/gefsikatsinelou/MetaSearchMCP.git"
Issues = "https://github.com/gefsikatsinelou/MetaSearchMCP/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "B904",   # raise-without-from-inside-except (intentional error propagation)
    "SIM108", # if-else-block-instead-of-if-exp (style preference)
]

[tool.ruff.lint.isort]
known-first-party = ["metasearchmcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.hatch.build.targets.wheel]
packages = ["metasearchmcp"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
